buildscript {
	ext {
		springBootVersion = '2.4.2'
		springSecurityVersion = '5.4.4'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'pt.lsts'
version = '1.0.0'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	maven {
		url "https://artifacts.unidata.ucar.edu/repository/unidata-all/"
	}
	maven { url 'https://jitpack.io' }
}


dependencies {

	// check which db libraries to include
	if (project.hasProperty('mariadb')) {
		compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.4'
	} else {
		runtime('com.h2database:h2')
	}

	// spring boot libs
	compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-data-jpa', 	version: "${springBootVersion}"
	compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-data-rest', 	version: "${springBootVersion}"
	compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-web', 		version: "${springBootVersion}"
    compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-websocket', 	version: "${springBootVersion}"
	compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-security',	version: "${springBootVersion}"
	compile group: 'org.springframework.boot', 			name: 'spring-boot-starter-validation',	version: "${springBootVersion}"

	// spring security libs
	compile group: 'org.springframework.security', 		name: 'spring-security-oauth2-client', 	version: "${springSecurityVersion}"	
	compile group: 'org.springframework.security', 		name: 'spring-security-messaging', 		version: "${springSecurityVersion}"
	
	compile group: 'edu.ucar', 							name: 'cdm', 							version: '4.6.11'
	compile group: 'commons-io', 						name: 'commons-io', 					version: '2.6'
	compile group: 'com.fasterxml.jackson.core', 		name: 'jackson-databind', 				version: '2.11.3'
	compile group: 'com.fasterxml.jackson.core', 		name: 'jackson-core',	 				version: '2.11.3'
	compile group: 'com.fasterxml.jackson.core', 		name: 'jackson-annotations',			version: '2.11.3'
	
	compile group: 'com.firebase', 						name: 'firebase-client-jvm', 			version: '2.5.2'
    compile group: 'com.google.code.gson', 				name: 'gson', 							version: '2.7'
    compile group: 'com.eclipsesource.minimal-json', 	name: 'minimal-json', 					version: '0.9.1'
    compile group: 'org.knowm.xchart', 					name: 'xchart', 						version: '3.5.2'
	compile group: 'com.google.api-client', 			name: 'google-api-client', 				version: '1.23.0'
	compile group: 'com.google.oauth-client',			name: 'google-oauth-client-jetty', 		version: '1.23.0'
	compile group: 'com.google.apis', 					name: 'google-api-services-sheets', 	version: 'v4-rev516-1.23.0'
	compile group: 'io.jsonwebtoken', 					name: 'jjwt', 							version: '0.9.1'
	compile group: 'org.webjars', 						name: 'webjars-locator-core',			version: '0.46'
    compile group: 'org.webjars', 						name: 'sockjs-client', 					version: '1.1.2'
    compile group: 'org.webjars', 						name: 'stomp-websocket', 				version: '2.3.3-1'
	compile group: 'com.twilio.sdk', 					name: 'twilio', 						version: '7.40.1'
	compile group: 'org.json', 							name: 'json', 							version: '20190722'

	compile files('libs/libimc.jar','libs/ais-contact-manager-1.0.jar')
	
	implementation group: 'dk.tbsalling', 				name: 'aisutils',						version: '1.0.0'
	implementation group: 'dk.tbsalling', 				name: 'aismessages',					version: '2.2.3'

	compile group: 'org.springdoc', 					name: 'springdoc-openapi-ui', 			version: '1.5.8'
	
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile('org.springframework.security:spring-security-test')
	implementation 'com.squareup.retrofit2:retrofit:2.5.0'

	implementation 'com.squareup.okhttp3:okhttp:3.0.1'

	implementation 'com.github.zepinto.imc4j:core:1.0.5'

}

configurations {
	all*.exclude module : 'log4j2'
    all*.exclude module : 'slf4j-log4j12'
}
